2008-11-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  Change summary/description as requested by Fedora.

2008-11-20  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/producers/looper/looper.py:
	Add warnings about segfault-causing version of gst-python.

2008-11-20  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/converters/overlay/overlay.py
	  (Overlay.configure_pipeline):
	Add a warning about broken gstreamer versions.

2008-11-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/examples/bouncer.xml:
	* conf/examples/default.xml:
	* conf/examples/discont.xml:
	* conf/examples/ipbouncer.xml:
	* conf/examples/twores.xml:
	* data/upgrade-to-0.5.3.xsl:
	* flumotion/component/producers/audiotest/admin_gtk.py:
	* flumotion/component/producers/audiotest/audiotest.py:
	* flumotion/component/producers/audiotest/audiotest.xml:
	* flumotion/component/producers/audiotest/wizard.glade:
	* flumotion/component/producers/audiotest/wizard_gtk.py:
	* flumotion/component/producers/soundcard/soundcard.py:
	* flumotion/component/producers/soundcard/soundcard.xml:
	* flumotion/component/producers/soundcard/wizard.glade:
	* flumotion/component/producers/soundcard/wizard_gtk.py:
	* flumotion/test/test_wizard_save.py:
	  Change 'rate' property to 'samplerate'.
	  Explicit is better than implicit, especially when we have
	  framerate and bitrate too.
	  Also document the default samplerate, and sync between wizard
	  and component.
	  

2008-11-19  Jan Urbanski  <jurbanski@flumotion.com>

	* bin/flumotion-admin-command (deleted):
	Complete the transition between flumotion-admin-command and
	flumotion-command by removing the obsoleted one. Fixes #725.

2008-11-14  Xavier Queralt Mateu  <xqueralt at flumotion dot com>

	* po/POTFILES.in:
	* po/ca.po:
	* po/de.po:
	* po/es.po:
	* po/fr.po:
	* po/nl.po:
	* po/no.po:
	* po/pt_BR.po:
	* po/sv.po:
	Catalan and spanish translations updated. 
