@@ -1,3 +1,8 @@
+2008-11-24  Pedro Gracia  <pedro@flumotion.com>
+
+	* flumotion/monitor/nagios/stream.py:
+	genToken isn't necesary.
+
 2008-11-23  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion.spec.in:
